[gd_scene load_steps=7 format=2]

[ext_resource path="res://game-ui/progress-bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://game-ui/game-ui.gd" type="Script" id=2]
[ext_resource path="res://assets/Kenney Blocks.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CountDownMeta/Label:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 64 ]
}

[sub_resource type="Animation" id=3]
resource_name = "count_down"
tracks/0/type = "value"
tracks/0/path = NodePath("CountDownMeta/Label:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 64, 16 ]
}

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
custom_constants/margin_right = 128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarContainer" parent="MarginContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 600.0

[node name="CountDownContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDownMeta" type="CenterContainer" parent="CountDownContainer"]
margin_left = 488.0
margin_top = 252.0
margin_right = 536.0
margin_bottom = 348.0
mouse_filter = 2

[node name="Label" type="Label" parent="CountDownContainer/CountDownMeta"]
margin_right = 48.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CountDownContainer"]
anims/RESET = SubResource( 2 )
anims/count_down = SubResource( 3 )
